# rust-essentials

./: Cargo.toml  README.md
exercises/: 01_variables_and_mutability.md  02_data_types.md  03_functions.md  04_control_flow.md  05_ownership.md  06_borrowing_references.md  07_structs.md  08_enums_pattern_matching.md  09_error_handling.md  10_oop.md  11_smart_pointers.md  13_macros.md  14_async_await.md  15_ffi.md  16_testing.md
explanations/: 01_variables_and_mutability.md  02_data_types.md  03_functions.md  04_control_flow.md  05_ownership.md  06_borrowing_references.md  07_structs.md  08_enums_pattern_matching.md  09_error_handling.md  10_oop.md  11_smart_pointers.md  12_concurrency.md  13_macros.md  14_async_await.md  15_ffi.md  16_testing.md
references/: index.md
src/: async_await.rs  borrowing_references.rs  concurrency.rs  control_flow.rs  data_types.rs  enums_patterns.rs  error_handling.rs  ffi.rs  functions_basics.rs  macros.rs  oop.rs  ownership.rs  smart_pointers.rs  structs_basics.rs  testing.rs  variables_and_mutability.rs
