[package]
name = "rust_essentials"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.9.0"
tokio = { version = "1.52.3", features = ["full"] }

[[bin]]
name = "variables_and_mutability"
path = "src/variables_and_mutability.rs"

[[bin]]
name = "data_types"
path = "src/data_types.rs"

[[bin]]
name = "functions_basics"
path = "src/functions_basics.rs"

[[bin]]
name = "control_flow"
path = "src/control_flow.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "borrowing_references"
path = "src/borrowing_references.rs"

[[bin]]
name = "structs_basics"
path = "src/structs_basics.rs"

[[bin]]
name = "enums_patterns"
path = "src/enums_patterns.rs"

[[bin]]
name = "error_handling"
path = "src/error_handling.rs"

[[bin]]
name = "oop"
path = "src/oop.rs"

[[bin]]
name = "smart_pointers"
path = "src/smart_pointers.rs"

[[bin]]
name = "concurrency"
path = "src/concurrency.rs"

[[bin]]
name = "macros"
path = "src/macros.rs"

[[bin]]
name = "async_await"
path = "src/async_await.rs"

[[bin]]
name = "ffi"
path = "src/ffi.rs"

[[bin]]
name = "testing"
path = "src/testing.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
